--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/67.oceanbase-dba_part_tables-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/67.oceanbase-dba_part_tables-of-mysql-mode.md
@@ -53,7 +53,7 @@ oceanbase.DBA_PART_TABLES
 | DEF_INMEMORY              | varchar(8)    | NO         | 指示内存中列存储（IM 列存储）是否用于此表中的分区：<li>（默认）ENABLED：启用<li>DISABLED：禁用<li>NONE：未指定                              |
 | DEF_INMEMORY_PRIORITY     | varchar(8)    | NO         | 指示内存中列存储（IM 列存储）填充的默认优先级。取值如下：<li>LOW<li>MEDIUM<li>HIGH<li>CRITICAL<li>NONE<li>NULL                                      |
 | DEF_INMEMORY_DISTRIBUTE   | varchar(15)   | NO         | 指示在 Real Application Clusters (RAC) 环境中默认情况下如何为表的分区分配 IM 列存储。取值如下：<li>AUTO<li>BY ROWID RANGE<li>BY PARTITION<li>BY SUBPARTITION                         |
-| DEF_INMEMORY_COMPRESSION  | varchar(17)   | NO         | IM 列存储的默认压缩级别：<li>NO MEMCOMPRESS<li>FOR DML<li>FOR QUERY \[ LOW | HIGH \]<li>FOR CAPACITY \[ LOW | HIGH \]<li>AUTO<li>NULL               |
+| DEF_INMEMORY_COMPRESSION  | varchar(17)   | NO         | IM 列存储的默认压缩级别：<li>NO MEMCOMPRESS<li>FOR DML<li>FOR QUERY \[ LOW \| HIGH \]<li>FOR CAPACITY \[ LOW \| HIGH \]<li>AUTO<li>NULL               |
 | DEF_INMEMORY_DUPLICATE    | varchar(13)   | NO         | 指示 RAC 环境中 IM 列存储的默认重复设置：<li>NO DUPLICATE<li>DUPLICATE<li>DUPLICATE<li>ALL                               |
 | DEF_READ_ONLY             | varchar(3)    | NO         | 指示新分区的默认设置：<li>YES：新分区的默认设置是只读的<li>NO：新分区的默认设置是读/写                 |
 | DEF_CELLMEMORY            | varchar(24)   | NO         | 父表中的新分区将继承的 CELLMEMORY 属性的默认值，除非该行为被显式覆盖                                   |
