--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/105.dba_tables-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/105.dba_tables-of-oracle-mode.md
@@ -77,7 +77,7 @@
 | INMEMORY                  | VARCHAR2(8)    | NO         | 指示是否对表启用内存中列存储（IM 列存储）：<ul><li>ENABLED </li> <li>DISABLED </li> </ul> |
 | INMEMORY_PRIORITY         | VARCHAR2(8)    | NO         | 指示内存中列存储（IM 列存储）填充的优先级。取值：<ul><li>LOW </li> <li>MEDIUM </li> <li>HIGH </li> <li>CRITICAL </li> <li>NONE </li> <li>NULL </li> </ul> |
 | INMEMORY_DISTRIBUTE       | VARCHAR2(15)   | NO         | 指示 IM 列存储在 Real Application Clusters (RAC) 环境中的分布方式：<ul><li>AUTO </li><li>BY ROWID RANGE </li><li>DUPLICATE </li><li>NONE </li><li>NULL </li> </ul> |
-| INMEMORY_COMPRESSION      | VARCHAR2(17)   | NO         | 指示 IM 列存储的压缩级别：<ul><li>NO MEMCOMPRESS </li><li>FOR DML</li><li>FOR QUERY \[ LOW | HIGH \]</li><li>FOR CAPACITY \[ LOW | HIGH \]</li><li>AUTO </li><li>NULL </li></ul> <br>该值基于表中段所在的位置。例如：如果表已分区并启用了 IM 列存储，则对于 ALL_TABLES 值为NULL，对于 ALL_TAB_SUBPARTITIONS 值为非 NULL                                                                                                                                |
+| INMEMORY_COMPRESSION      | VARCHAR2(17)   | NO         | 指示 IM 列存储的压缩级别：<ul><li>NO MEMCOMPRESS </li><li>FOR DML</li><li>FOR QUERY \[ LOW \| HIGH \]</li><li>FOR CAPACITY \[ LOW \| HIGH \]</li><li>AUTO </li><li>NULL </li></ul> <br>该值基于表中段所在的位置。例如：如果表已分区并启用了 IM 列存储，则对于 ALL_TABLES 值为NULL，对于 ALL_TAB_SUBPARTITIONS 值为非 NULL                                                                                                                                |
 | INMEMORY_DUPLICATE        | VARCHAR2(13)   | NO         | 指示 RAC 环境中 IM 列存储的重复设置：<ul><li>DUPLICATE</li><li>NO DUPLICATE</li><li>DUPLICATE ALL </li></ul>                                                                                                                                |
 | DEFAULT_COLLATION         | VARCHAR2(100)  | NO         | 表的默认排序规则                                                                                                                                |
 | DUPLICATED                | VARCHAR2(1)    | NO         | 指示表是否在此分片上重复：<ul><li>YES </li> <li>NO </li> </ul> |
