--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/30.all_tables-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/30.all_tables-of-oracle-mode.md
@@ -86,7 +86,7 @@ ALL_TABLES
 | INMEMORY                  | VARCHAR2(8)    | NO         | 指示是否对表启用内存中列存储（IM 列存储）：<li>ENABLED<li>DISABLED  |
 | INMEMORY_PRIORITY         | VARCHAR2(8)    | NO         | 指示内存中列存储（IM 列存储）填充的优先级。取值：<li>LOW<li>MEDIUM<li>HIGH<li>CRITICAL<li>NONE<li>NULL  |
 | INMEMORY_DISTRIBUTE       | VARCHAR2(15)   | NO         | 指示 IM 列存储在 Real Application Clusters (RAC) 环境中的分布方式：<li>AUTO<li>BY ROWID RANGE<li>DUPLICATE<li>NONE<li>NULL   |
-| INMEMORY_COMPRESSION      | VARCHAR2(17)   | NO         | 指示 IM 列存储的压缩级别：<li>NO MEMCOMPRESS<li>FOR DML<li>FOR QUERY \[ LOW | HIGH \]<li>FOR CAPACITY \[ LOW | HIGH \]<li>AUTO<li>NULL <br>该值基于表中段所在的位置。例如：如果表已分区并启用了 IM 列存储，则对于 ALL_TABLES 值为NULL，对于 ALL_TAB_SUBPARTITIONS 值为非 NULL                                                                                                                                |
+| INMEMORY_COMPRESSION      | VARCHAR2(17)   | NO         | 指示 IM 列存储的压缩级别：<li>NO MEMCOMPRESS<li>FOR DML<li>FOR QUERY \[ LOW \| HIGH \]<li>FOR CAPACITY \[ LOW \| HIGH \]<li>AUTO<li>NULL <br>该值基于表中段所在的位置。例如：如果表已分区并启用了 IM 列存储，则对于 ALL_TABLES 值为NULL，对于 ALL_TAB_SUBPARTITIONS 值为非 NULL                                                                                                                                |
 | INMEMORY_DUPLICATE        | VARCHAR2(13)   | NO         | 指示 RAC 环境中 IM 列存储的重复设置：<li>DUPLICATE<li>NO DUPLICATE<li>DUPLICATE ALL                                                                                                                                 |
 | DEFAULT_COLLATION         | VARCHAR2(100)  | NO         | 表的默认排序规则                                                                                                                                |
 | DUPLICATED                | VARCHAR2(1)    | NO         | 指示表是否在此分片上重复：<li>YES<li>NO |
