--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/1.V3.2/95.ob-324.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/1.V3.2/95.ob-324.md
@@ -101,14 +101,10 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
 
 | 配置项 | 修改类型 | 默认值 | 新默认值 | 描述 |
 | --- | --- | --- | --- | --- |
-| enable_cgroup | 新增 | 
- | True | 是否开启 cgroup 功能。 |
-| sql_login_thread_count | 新增 | 
- | 0 | 登录请求处理线程的数量。默认值 0 表示动态调整。 |
-| ob_query_switch_leader_retry_timeout | 新增 | 
- | 0us | 失败 Query 的最长重试时间。默认值 0us 表示关闭重试超时检查功能。 |
-| diag_syslog_per_error_limit | 新增 | 
- | 200 | 每秒钟每个错误码的诊断日志数量限制 |
+| enable_cgroup | 新增 |-| False | 是否开启 cgroup 功能。 |
+| sql_login_thread_count | 新增 |-| 0 | 登录请求处理线程的数量。默认值 0 表示动态调整。 |
+| ob_query_switch_leader_retry_timeout | 新增 |-| 0us | 失败 Query 的最长重试时间。默认值 0us 表示关闭重试超时检查功能。 |
+| diag_syslog_per_error_limit | 新增 |-| 200 | 每秒钟每个错误码的诊断日志数量限制 |
 | ob_esi_syslog_level | 修改 | INFO | WDIAG | 存储独立子进程日志级别 |
 | syslog_level | 修改 | INFO | WDIAG | 系统日志级别 |
 
