--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/227.dba_ob_backup_delete_task_history-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/227.dba_ob_backup_delete_task_history-of-oracle-mode.md
@@ -11,8 +11,7 @@
 | TASK_TYPE | VARCHAR2(64) | NO | 任务类型，包括：backup_set、piece |
 | ID | NUMBER(38) | NO | 任务 ID，包括：backup_set、piece |
 | ROUND_ID | NUMBER(38) | NO | piece 所属的 dest_round_id，对于 backup_set 的清理，ROUND_ID 为 0 |
-| DEST_ID | NUMBER(38) | NO | 备份目的端的 
-DEST_ID |
+| DEST_ID | NUMBER(38) | NO | 备份目的端的 DEST_ID |
 | START_TIMESTAMP | VARCHAR2(256) | NO | 任务开始时间 |
 | END_TIMESTAMP | VARCHAR2(256) | NO | 任务结束时间 |
 | STATUS | VARCHAR2(64) | NO | 任务状态，包含：<li>INIT<li>DOING<li>CANCELING<li>CANCELED<li>COMPLETED<li>FAILED |
