400ofuse关键词修改

--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/2.quickly-experience-oceanbase-for-community.md
@@ -29,7 +29,7 @@
 
 ### 步骤 1：下载并安装 all-in-one package
 
-从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、 OBProxy、obagent、Grafana 和 Prometheus 的安装；您可以根据实际需求选择部分组件安装或者指定组件的版本。
+从 V4.0.0 开始，OceanBase 提供统一的安装包 all-in-one package。您可以通过这个统一的安装包一次性完成 OBD、OceanBase 数据库、ODP、obagent、Grafana 和 Prometheus 的安装；您可以根据实际需求选择部分组件安装或者指定组件的版本。
 all-in-one package 提供了两种安装方式：
 
 #### 在线安装 all-in-one package
@@ -107,7 +107,7 @@ all-in-one package 提供了两种安装方式：
     =====================================================================
   ```
 
-  执行 `which obd` 和 `which obclient` 检测是否安装成功，如果可以找到 oceanbase-all-in-one 下的 obd 和 obclient 路径，则表示安装成功。
+  执行 `which obd` 和 `which obclient` 检测是否安装成功，如果可以找到 oceanbase-all-in-one 下的 OBD 和 OBClient 路径，则表示安装成功。
 
   ```bash
     [root@test .obd]# which obd
