--- a/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/1.python-application-of-mysql-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/1.python-application-of-mysql-model.md
@@ -22,10 +22,10 @@ obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
 
 参数说明：
 
-* **-h**：OceanBase 数据库连接 IP，有时候是一个 OBProxy 地址。
-* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 OBProxy 连接时需要填写。
+* **-h**：OceanBase 数据库连接 IP，有时候是一个 ODP 地址。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 * **-p**：用户密码。
-* **-P**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **-P**：OceanBase 数据库连接端口，也是 ODP 的监听端口。
 * **-D**：需要访问的数据库名称。
 
 ### 步骤二：安装 PyMySQL 驱动
@@ -91,13 +91,13 @@ finally:
 
 修改代码中的数据库连接参数。参考如下字段，对应的值，则取自步骤一获取的数据库连接串。
 
-* **user**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 OBProxy 连接时需要填写。
+* **user**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 
 * **password**：取自 `-p` 参数，用户密码。
 
-* **host**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 OBProxy 地址。
+* **host**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 ODP 地址。
 
-* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 ODP 的监听端口。
 
 * **db**：取自 `-D` 参数，需要访问的数据库名称。
 
@@ -127,10 +127,10 @@ obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
 
 参数说明：
 
-* **-h**：OceanBase 数据库连接 IP，有时候是一个 OBProxy 地址。
-* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 OBProxy 连接时需要填写。
+* **-h**：OceanBase 数据库连接 IP，有时候是一个 ODP 地址。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 * **-p**：用户密码。
-* **-P**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **-P**：OceanBase 数据库连接端口，也是 ODP 的监听端口。
 * **-D**：需要访问的数据库名称。
 
 ### 步骤二：安装 MySQL-python 驱动
@@ -192,13 +192,13 @@ finally:
 
 修改代码中的数据库连接参数。参考如下字段，对应的值，则取自步骤一获取的数据库连接串。
 
-* **host**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 OBProxy 地址。
+* **host**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 ODP 地址。
 
-* **user**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 OBProxy 连接时需要填写。
+* **user**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 
 * **passwd**：取自 `-p` 参数，用户密码 。
 
-* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 ODP 的监听端口。
 
 * **db**：取自 `-D` 参数，需要访问的数据库名称。
 
