--- a/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/2.java-application-of-mysql-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/2.java-application-of-mysql-model.md
@@ -24,10 +24,10 @@ obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
 
 参数说明：
 
-* **-h**：OceanBase 数据库连接 IP，有时候是一个 OBProxy 地址。
-* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直接连接数据库时不填集群名称，通过 OBProxy 连接时需要填写。
+* **-h**：OceanBase 数据库连接 IP，有时候是一个 ODP 地址。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直接连接数据库时不填集群名称，通过 ODP 连接时需要填写。
 * **-p**：用户密码。
-* **-P**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **-P**：OceanBase 数据库连接端口，也是 ODP 的监听端口。
 * **-D**：需要访问的数据库名称。
 
 ### 步骤二：编写应用程序
@@ -93,13 +93,13 @@ connection = DriverManager.getConnection("jdbc:mysql://{host}:{port}/{dbname}?us
 jdbc:mysql://100.88.xx.xx:2881/test?user=r***&password=***1**`
 ```
 
-* **host**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 OBProxy 地址。
+* **host**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 ODP 地址。
 
-* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 ODP 的监听端口。
 
 * **dbname**：取自 `-D` 参数，需要访问的数据库名称。
 
-* **username**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 OBProxy 连接时需要填写。
+* **username**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 
 * **password**：取自 `-p` 参数，用户密码 。
 
