--- a/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/4.golang-application-of-mysql-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/4.golang-application-of-mysql-model.md
@@ -20,10 +20,10 @@ obclient  -h100.88.xx.xx -uroot@test -p***1** -P2881 -Doceanbase
 
 参数说明：
 
-* **-h**：OceanBase 数据库连接 IP，有时候是一个 OBProxy 地址。
-* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直接连接数据库时不填集群名称，通过 OBProxy 连接时需要填写。
+* **-h**：OceanBase 数据库连接 IP，有时候是一个 ODP 地址。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直接连接数据库时不填集群名称，通过 ODP 连接时需要填写。
 * **-p**：用户密码。
-* **-P**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **-P**：OceanBase 数据库连接端口，也是 ODP 的监听端口。
 * **-D**：需要访问的数据库名称。
 
 ### 步骤二：安装 Go-SQL-Driver/MySQL
@@ -51,10 +51,10 @@ go get -u github.com/go-sql-driver/mysql
     git clone https://github.com/go-sql-driver/mysql.git 
     ```
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p><code>/usr/local/go/src</code> 需要替换成 Go 实际安装目录操作。</p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p><code>/usr/local/go/src</code> 需要替换成 Go 实际安装目录操作。</p>
+   </main>
 
 2. 通过 `go install` 进行安装。
 
@@ -62,14 +62,14 @@ go get -u github.com/go-sql-driver/mysql
     go install mysql
     ```
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>部分版本 <code>go install</code> 的默认执行目录可能不是 <code>/src</code>，可以通过 <code>go install</code> 执行后的报错判断实际目录。例如，报错 <code>cannot find package &quot;mysql&quot; in: /usr/local/go/src/vendor/mysql</code>，则应该将 mysql 文件夹放在 <code>/src/vendor</code> 目录下再执行安装命令。</p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>部分版本 <code>go install</code> 的默认执行目录可能不是 <code>/src</code>，可以通过 <code>go install</code> 执行后的报错判断实际目录。例如，报错 <code>cannot find package &quot;mysql&quot; in: /usr/local/go/src/vendor/mysql</code>，则应该将 mysql 文件夹放在 <code>/src/vendor</code> 目录下再执行安装命令。</p>
+   </main>
 
 ### 步骤三：编写应用程序
 
-将下文编写示例文件 `test.go` ，代码如下：
+将下文编写示例文件 `test.go`，代码如下：
 
 ```go
 package main
@@ -142,13 +142,13 @@ conn := "root:@tcp(127.0.0.1:2881)/test"
 
 参数说明：
 
-* **username**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 OBProxy 连接时需要填写。
+* **username**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认租户是 'sys'，租户的默认管理员用户是 'root'。直连数据库时不填写集群名称，通过 ODP 连接时需要填写。
 
 * **password**：取自 `-p` 参数，用户密码。
 
-* **hostname**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 OBProxy 地址。
+* **hostname**：取自 `-h` 参数，OceanBase 数据库连接地址，有时候是 ODP 地址。
 
-* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **port**：取自 `-P` 参数，OceanBase 数据库连接端口，也是 ODP 的监听端口。
 
 * **dbname**：取自 `-D` 参数，需要访问的数据库名称。
 
