--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md
@@ -31,13 +31,13 @@ obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
 
 参数说明：
 
-* **-h**：OceanBase 数据库连接 IP，有时候是一个 OBProxy 地址。
+* **-h**：OceanBase 数据库连接 IP，有时候是一个 ODP 地址。
 
-* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，租户的连接用户，oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 OBProxy 连接时需要填写。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，租户的连接用户，oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 ODP 连接时需要填写。
 
 * **-p**：用户密码。
 
-* **-P**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **-P**：OceanBase 数据库连接端口，也是 ODP 的监听端口。
 
 ### 步骤二：安装 JayDeBeApi 驱动
 
@@ -94,9 +94,9 @@ ob_test()
 
 修改代码中的数据库连接参数。参考如下字段，对应的值，则取自步骤一获取的数据库连接串。
 
-* **url**：取自 `-h` 和 `-P` 参数，`jdbc:oceanbase://IP:port/?pool=false`。OceanBase 数据库连接 IP，通常是一个 OBProxy 地址，以及访问所用的端口号。
+* **url**：取自 `-h` 和 `-P` 参数，`jdbc:oceanbase://IP:port/?pool=false`。OceanBase 数据库连接 IP，通常是一个 ODP 地址，以及访问所用的端口号。
 
-* **user**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 OBProxy 连接时需要填写。
+* **user**：取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 ODP 连接时需要填写。
 
 * **password**：取自 `-p` 参数，用户密码。
 
