--- a/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md
@@ -19,7 +19,7 @@
 
   * 编译器：GCC 4.8。
 
-* 请联系技术支持人员获取 OBCI 和 libobclient 的 RPM 安装包。
+* 请联系技术支持人员获取 OBCI 和 LibOBClient 的 RPM 安装包。
 
 ### 步骤一：获取数据库连接串
 
@@ -33,13 +33,13 @@ obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
 
 参数说明：
 
-* **-h**：OceanBase 数据库连接 IP，有时候是一个 OBProxy 地址。
+* **-h**：OceanBase 数据库连接 IP，有时候是一个 ODP 地址。
 
-* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，租户的连接用户，Oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 OBProxy 连接时需要填写。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，租户的连接用户，Oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 ODP 连接时需要填写。
 
 * **-p**：用户密码。
 
-* **-P**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口。
+* **-P**：OceanBase 数据库连接端口，也是 ODP 的监听端口。
 
 ### 步骤二：安装 C 相关驱动
 
@@ -58,7 +58,7 @@ rpm -ivh libobclient-<version>.x86_64.rpm
 
 ### 步骤三：编写应用程序
 
-本文通过具体实例介绍在 OceanBase 数据库 Oracle 模式下，C 应用程序通过 OBCI 与数据库服务器 OBServer 交互的基本方式。
+本文通过具体实例介绍在 OceanBase 数据库 Oracle 模式下，C 应用程序通过 OBCI 与数据库服务器 OBServer 节点交互的基本方式。
 
 1. 初始化 OBCI 环境和线程。
 
@@ -329,9 +329,9 @@ strcpy(strUserName, "s**@oracle");
 strcpy(strPassword, "***1**");
 ```
 
-* **strServerName**：取自 `-h` 和 `-P` 参数，`IP:port`。OceanBase 数据库连接 IP，通常是一个 OBProxy 地址，以及访问所用的端口号。
+* **strServerName**：取自 `-h` 和 `-P` 参数，`IP:port`。OceanBase 数据库连接 IP，通常是一个 ODP 地址，以及访问所用的端口号。
 
-* **strUserName**： 取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 OBProxy 连接时需要填写。
+* **strUserName**： 取自 `-u` 参数，租户的连接用户名，格式为 **用户@租户#集群名称**，oracle 模式的管理员用户名默认是 `sys`。直连数据库时不填集群名称，通过 ODP 连接时需要填写。
 
 * **strPassword**：取自 `-p` 参数，用户密码。
 
