--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallelly-importing-and-data-compression.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/3.experience-parallelly-importing-and-data-compression.md
@@ -4,7 +4,7 @@
 
 ## 并行导入
 
-除了分析查询，Operational OLAP 中还有很重要的一个部分，那就是大量数据的并行导入，也就是数据批处理能力。OceanBase 数据库的并行执行框架能够将 DML 语句也通过并发的方式进行执行（Parallel DML），对于多节点的数据库，实现多机并发写入，并且保证大事务的一致性。结合异步转储机制，还能在很大程度上优化 LSM tree 存储引擎在内存紧张的情况下对大事务的支持。
+除了分析查询，Operational OLAP 中还有很重要的一个部分，那就是大量数据的并行导入，也就是数据批处理能力。OceanBase 数据库的并行执行框架能够将 DML 语句也通过并发的方式进行执行（Parallel DML），对于多节点的数据库，实现多机并发写入，并且保证大事务的一致性。结合异步转储机制，还能在很大程度上优化 LSM-Tree 存储引擎在内存紧张的情况下对大事务的支持。
 
 我们通过这样一个例子来体验 PDML：仍然以 TPC-H 的 `lineitem` 表为基础，创建一张相同表结构的空表 `lineitem2`。然后以 `INSERT INTO ...SELECT` 的方式，用一条 SQL 语句将 `lineitem` 的全部 600 万行数据插入到新表 `lineitem2` 中。下面我们分别用关闭和开启 PDML 的方式执行，观察其效果和区别。
 
@@ -103,7 +103,7 @@ Records: 6001215  Duplicates: 0  Warnings: 0
 
 ## 数据压缩
 
-OceanBase 数据库基于 LSM Tree 结构开发了自己的存储引擎。其中数据大致被分为基线数据（SSTable）和增量数据（MemTable）两部分，基线数据被保存在磁盘中，增量修改在内存中进行。这使得一方面数据在磁盘中能够以更紧凑的方式存储。除此之外由于在磁盘中的基线数据不会频繁更新，OceanBase 数据库又基于通用压缩算法对基线数据进行了再次压缩，使得数据存储在 OceanBase 数据库中可以获得非常好的压缩比。同时这种数据压缩并未带来查询和写入性能的下降。下面我们介绍 OceanBase 数据库导入大量外部数据并且观察数据压缩比的方法。
+OceanBase 数据库基于 LSM-Tree 结构开发了自己的存储引擎。其中数据大致被分为基线数据（SSTable）和增量数据（MemTable）两部分，基线数据被保存在磁盘中，增量修改在内存中进行。这使得一方面数据在磁盘中能够以更紧凑的方式存储。除此之外由于在磁盘中的基线数据不会频繁更新，OceanBase 数据库又基于通用压缩算法对基线数据进行了再次压缩，使得数据存储在 OceanBase 数据库中可以获得非常好的压缩比。同时这种数据压缩并未带来查询和写入性能的下降。下面我们介绍 OceanBase 数据库导入大量外部数据并且观察数据压缩比的方法。
 
 ### 数据准备
 
@@ -149,7 +149,7 @@ OceanBase 数据库支持多种方式将 csv 格式的数据导入到 OceanBase 
 
 ### 数据导入
 
-我们可以使用 OceanBase 数据库内置的 Load Data 命令导入数据，Load Data 同样支持并行导入。开始导入前进行如下设置。Load Data 命令仅支持数据文件在 OBServer 本地执行，如果您希望远程进行数据导入，可以参考使用 OceanBase 数据库的 obloader 工具。
+我们可以使用 OceanBase 数据库内置的 Load Data 命令导入数据，Load Data 同样支持并行导入。开始导入前进行如下设置。Load Data 命令仅支持数据文件在 OBServer 节点本地执行，如果您希望远程进行数据导入，可以参考使用 OceanBase 数据库的 obloader 工具。
 
 ```sql
 SET ob_query_timeout=1000000000;
@@ -160,7 +160,7 @@ GRANT FILE ON *.* to username;
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>由于安全原因，以上授权 SQL 只能使用本地访问执行，不能使用远程 OBClient 执行。即需要在 OBServer 所在机器上登录 OBClient （或者 MySQL 客户端） 执行。</p>
+    <p>由于安全原因，以上授权 SQL 只能使用本地访问执行，不能使用远程 OBClient 执行。即需要在 observer 进程所在机器上登录 OBClient （或者 MySQL 客户端） 执行。</p>
   </main>
 
 设置完成后，重连会话使设置生效。然后运行导入语句:
