--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/6.experience-full-link-diagnosis.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/6.experience-full-link-diagnosis.md
@@ -1,10 +1,10 @@
 # 体验全链路诊断
 
-OceanBase 数据库的全链路诊断机制通过建立事务与 SQL 追踪的标准数据模型，扩展了 SQL Trace 的功能，可以提升定位 OBServer 全链路问题的效率，并实现了分布式和并行执行时的追踪分析能力。
+OceanBase 数据库的全链路诊断机制通过建立事务与 SQL 追踪的标准数据模型，扩展了 SQL Trace 的功能，可以提升定位 OBServer 节点全链路问题的效率，并实现了分布式和并行执行时的追踪分析能力。
 
 运维人员可根据需要使用 PL 程序包 `DBMS_MONITOR` 中的相关方法来控制应用程序中不同标识信息维度的全链路诊断 Trace 的开启与关闭，以及该 Trace 的打点和相关信息打印到 Trace 日志的策略。需要注意的是，日志打印会根据采样频率判断是否会被采样并记录到内存中，即是否打印到 Trace 日志中具有一定的概率性。
 
-PL 程序包 `DBMS_APPLICATION_INFO` （设置模块名称、处理过程名称和其他客户端相关信息） 和 `DBMS_SESSION` （设置 Session Identifier）可以用于在应用程序 APP 中设置标识应用信息。Session Identifier、模块名称、处理过程名称和其他客户端相关信息设置完成后，OBServer 内部会同步设置到当前 Session 的结构信息中，相关信息用户可以通过 `V$SESSION` 视图查询。
+PL 程序包 `DBMS_APPLICATION_INFO` （设置模块名称、处理过程名称和其他客户端相关信息） 和 `DBMS_SESSION` （设置 Session Identifier）可以用于在应用程序 APP 中设置标识应用信息。Session Identifier、模块名称、处理过程名称和其他客户端相关信息设置完成后，observer 进程内部会同步设置到当前 Session 的结构信息中，相关信息用户可以通过 `V$SESSION` 视图查询。
 
 
 ## 打开和关闭 Trace 
