--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
@@ -20,7 +20,7 @@ Hint 在语句注释中的语法格式如下：
 
     <main id="notice" type='explain'>
      <h4>说明</h4>
-     <p> <code>READ_CONSISTENCY</code> Hint 仅仅是使当前查询可以进行弱一致性读，完全的读写分离还是要有路由等的支持。OceanBase 数据库的读写分离功能依赖 OBProxy 的 LDC 功能，如果需要使用读写分离功能，建议先进行 LDC 配置。有关读写分离的详细信息，请参见 <a href="../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md">读写分离</a> 。  </p>
+     <p> <code>READ_CONSISTENCY</code> Hint 仅仅是使当前查询可以进行弱一致性读，完全的读写分离还是要有路由等的支持。OceanBase 数据库的读写分离功能依赖 ODP 的 LDC 功能，如果需要使用读写分离功能，建议先进行 LDC 配置。有关读写分离的详细信息，请参见 <a href="../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md">读写分离</a> 。  </p>
     </main>
 
 * `INDEX` Hint 指示优化器对指定的表使用索引扫描。
