--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
@@ -49,7 +49,7 @@
     <p>OceanBase 数据库会依据 JDBC 驱动连接时的租户名称判断运行模式为 MySQL 或者 Oracle。Oracle 模式的租户只允许使用 Oracle 兼容的 SQL 语法。</p>
   </main>
 
-  除了支持标准的 JDBC 应用程序编程接口（API），OceanBase Connector/J 还兼容 Oracle Driver 的使用方式，OBServer 的 Oracle 模式兼容 Oracle 的大部分语法。
+  除了支持标准的 JDBC 应用程序编程接口（API），OceanBase Connector/J 还兼容 Oracle Driver 的使用方式，OceanBase 的 Oracle 模式兼容 Oracle 的大部分语法。
 
   OceanBase Connector/J 采用一键安装模式，驱动安装包名称为：`oceanbase-client-[版本号].jar`。请联系技术支持人员获取 OceanBase Connector/J 驱动程序安装包。关于具体安装步骤，请参见官网文档 [OceanBase Connector/J](https://www.oceanbase.com/docs/enterprise/oceanbase-connector-j-cn)。
 
