--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
@@ -24,7 +24,7 @@
 
 * `ROLLBACK`：回滚整个事务已做的修改或者只回滚某个保存点之后事务已做的修改，清除回滚部分包含的所有保存点和释放事务持有的锁。
 
-在 obclient 命令环境下，可以在 SQL 提示符后发起事务控制命令，也可以修改会话级别的 `autocommit` 参数来控制事务是否自动提交。
+在 OBClient 命令环境下，可以在 SQL 提示符后发起事务控制命令，也可以修改会话级别的 `autocommit` 参数来控制事务是否自动提交。
 
 * 通过 `SET autocommit` 设置变量时，当前会话立即生效，断开链接之后被设置的变量会失效。
 
