--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -100,13 +100,13 @@
   | /data/1    | 取决于所需存储的数据大小   | OCP 元数据库数据盘 | 建议 ext4，大于 16 TB 使用 xfs |
   | /docker    | 200 GB\~500 GB | Docker 根目录  | 建议 ext4                 |
 
-* OBServer 服务器的磁盘挂载点要求如下表所示。
+* OBServer 节点的磁盘挂载点要求如下表所示。
 
   |    挂载点     |       大小       |       用途       |         文件系统格式          |
   |------------|----------------|----------------|-------------------------|
-  | /home      | 100 GB\~300 GB | OBServer 运行日志盘 | 建议 ext4                 |
-  | /data/log1 | 内存大小的 3\~4 倍   | OBServer 日志盘   | 建议 ext4                 |
-  | /data/1    | 取决于所需存储的数据大小   | OBServer 数据盘   | 建议 ext4，大于 16 TB 使用 xfs |
+  | /home      | 100 GB\~300 GB | observer 进程运行日志盘 | 建议 ext4                 |
+  | /data/log1 | 内存大小的 3\~4 倍   | observer 进程日志盘   | 建议 ext4                 |
+  | /data/1    | 取决于所需存储的数据大小   | observer 进程数据盘   | 建议 ext4，大于 16 TB 使用 xfs |
 
 * OMS 服务器的磁盘挂载点要求如下表所示。
 
