--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/3.prepare-the-installation-package.md
@@ -32,9 +32,9 @@
        <td>请联系技术支持获取最新 OceanBase 数据库安装包。</td>
    </tr>
    <tr>
-       <td>OBProxy RPM 包</td>
+       <td>ODP RPM 包</td>
        <td>用于部署代理服务。</td>
-       <td>请联系技术支持获取最新 OBProxy 安装包。</td>
+       <td>请联系技术支持获取最新 ODP 安装包。</td>
    </tr>
    <tr>
        <td>（可选）OMS docker image</td>
