--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/4.upload-the-installation-package.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/4.upload-the-installation-package.md
@@ -2,7 +2,7 @@
 
 本文为您介绍如何将各产品的安装包上传到安装 OAT 的服务器上。
 
-在使用 OAT 部署 OCP、OMS、ODC 或 OBProxy 之前，您需要向安装 OAT 的服务器上传各产品所需的安装包。安装包可以是 tar 格式或 tar.gz 格式的镜像。
+在使用 OAT 部署 OCP、OMS、ODC 或 ODP 之前，您需要向安装 OAT 的服务器上传各产品所需的安装包。安装包可以是 tar 格式或 tar.gz 格式的镜像。
 
 在安装 OAT 后，您需要将安装包上传到 `/oat/data_dir/images` 目录中。
 
