--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/1.add-observer-machine-to-the-ocp-resource-pool.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/1.add-observer-machine-to-the-ocp-resource-pool.md
@@ -1,6 +1,6 @@
-# 添加 OBServer 机器到 OCP 资源池
+# 添加机器到 OCP 资源池
 
-部署 OceanBase 集群前，需要将 OBServer 机器添加到 OCP 资源池。
+部署 OceanBase 集群前，需要将机器添加到 OCP 资源池。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -11,10 +11,10 @@
 
 1. 在浏览器中输入 http://\< *OCP 服务器的 IP 地址* \>:8080，使用 admin 账号登录 OCP。
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。</p>
+   </main>
 
 2. 在左侧导航栏上，选择 **主机**。
 
@@ -28,7 +28,7 @@
 
    |   **字段** |         **描述**     |
    |------------|----------------------|
-   | **IP 地址**  | OBServer 对应网卡的 IP。  |
+   | **IP 地址**  | 添加的机器对应网卡的 IP。  |
    | **ssh 端口** | 默认为 22。               |
    | **机型**   | 为配置相同的主机指定的一个标签，便于 OCP 更好地管理主机。如果没有对应的机型，可以单击 **新增机型** ，添加新的机型。|
    | **机房**   | 选择机器所处机房。机房信息包括 **机房** 与 **区域** 。<ul><li>机房是 OceanBase 集群需要记录的一种主机属性，这个属性会作为 OceanBase 负载均衡和 SQL 语句路由策略的参考项，请按照实际情况填写。</li><li>区域用于表示主机所处的地理区域，是 OceanBase 集群需要记录的主机属性之一，对于 OceanBase 集群的负载均衡和 SQL 语句路由策略会有一定的影响，请按照实际情况填写。</li></ul><blockquote><b>说明</b></br> OCP V3.1.1 版本开始支持多 AZone 模式，新增机房时，将在当前 OCP 所在的 AZone 中创建新的机房。</blockquote> |
