--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/4.deploy-obproxy/1.deployment-instructions.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/4.deploy-obproxy/1.deployment-instructions.md
@@ -1,6 +1,6 @@
 # 部署说明
 
-OBProxy 可以将用户发起的数据访问请求转发到正确的 OBServer 上。OBProxy 为您提供了创建 OBPRoxy 集群、查看 OBProxy 集群信息和查看 OBProxy 监控信息的功能。
+OBProxy 可以将用户发起的数据访问请求转发到正确的 OBServer 节点上。OCP 为您提供了创建 OBProxy 集群、查看 OBProxy 集群信息和查看 OBProxy 监控信息的功能。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
