--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/2.configure-deployment-environment-by-using-the-oat-cli.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/2.configure-deployment-environment-by-using-the-oat-cli.md
@@ -22,9 +22,9 @@
 [root@hostname clonescripts]# ./clone.sh -c -r ocp
 ```
 
-### OBServer 服务器
+### OBServer 节点
 
-执行以下命令，对每台 OBServer 服务器进行设置。
+执行以下命令，对每台 OBServer 节点进行设置。
 
 ```shell
 [root@hostname /]# cd /root/t-oceanbase-antman/clonescripts
@@ -42,9 +42,9 @@
 [root@hostname clonescripts]# ./clone.sh -m -r ocp
 ```
 
-### OBServer 服务器安装依赖包
+### OBServer 节点安装依赖包
 
-在每台 OBServer 服务器执行以下命令，安装依赖包。
+在每台 OBServer 节点执行以下命令，安装依赖包。
 
 ```shell
 [root@hostname /]# cd /root/t-oceanbase-antman/clonescripts
