--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/2.generate-configuration-file.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/2.generate-configuration-file.md
@@ -95,7 +95,7 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
 
    * 根据物理机的 CPU 和内存资源编排 Docker 容器资源。
 
-   * 可使用命令 `docker load -i {docker image 包}` 和命令 `docker images` 获取 OCP 各组件 Docker 容器的版本信息，包括 OBServer、OBProxy 和 OCP。
+   * 可使用命令 `docker load -i {docker image 包}` 和命令 `docker images` 获取 OCP 各组件 Docker 容器的版本信息，包括 OBServer、ODP 和 OCP。
 
    * 如果准备部署 OMS，请填写 OMS 基本配置，包括部署 OMS 机器的 IP 和 OMS Docker 容器的版本信息。
 
@@ -146,16 +146,16 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
       * 如果负载均衡模式选择 F5，则需要配置准备好的 obproxy vip、vport 和 ocp vip、vport，需要预先申请。
 
    * 请根据物理机的 CPU 和内存资源编排 Docker 容器资源。</br>
-      默认规格：OBServer 32C/128G；OCP 8C/16G；OBProxy 4C/12G。</br>
-      若物理机资源为推荐最低配置，可做自定义调整，OBServer不低于 24C/100G，OCP 不低于 4C/8G， OBProxy不低于 2C/10G。
+      默认规格：OBServer 32C/128G；OCP 8C/16G；ODP 4C/12G。</br>
+      若物理机资源为推荐最低配置，可做自定义调整，OBServer不低于 24C/100G，OCP 不低于 4C/8G， ODP不低于 2C/10G。
 
-   * 可使用命令 `docker load -i {docker image 包}` 和命令 `docker images` 获取 OCP 各组件Docker 容器的版本信息，包括 OBServer、OBProxy 和 OCP。
+   * 可使用命令 `docker load -i {docker image 包}` 和命令 `docker images` 获取 OCP 各组件Docker 容器的版本信息，包括 OBServer、ODP 和 OCP。
   
    * 如果准备部署 OMS，请填写 OMS 基本配置，包括部署 OMS 机器的 IP 和 OMS docker 容器的版本信息。
 
    * 如果准备部署 ODC，请填写 ODC docker 容器的版本信息。
 
-## 多 AZ 模式部署
+## 多可用区模式部署
 
 1. 检查 `/root/t-oceanbase-antman/` 目录下是否有 obcluster.conf 文件。
 
@@ -177,8 +177,8 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
    示例如下：
 
    ```javascript
-   ##################  OCP 多 AZ 配置  ###################### 
-   OCP_MAZ_ENABLED=TRUE                                 # 如果开启多AZ，且没有全局vip时，上面配置的 OCP_VIP 和 OBPROXY_VIP 可改成主az的 vip 或者 任意ocp节点的ip
+   ##################  OCP 多可用区配置  ###################### 
+   OCP_MAZ_ENABLED=TRUE                                 # 如果开启多可用区，且没有全局vip时，上面配置的 OCP_VIP 和 OBPROXY_VIP 可改成主az的 vip 或者 任意ocp节点的ip
    OCP_MAZ_AZ_NAME_LIST=(az1 az1 az2)                # 对应 ocp1，ocp2，ocp3配置的 az_name
    OCP_MAZ_OCP_VIP_LIST=(192.168.0.1 192.168.0.2 192.168.0.3)    # 对应 ocp1，ocp2，ocp3配置的 site-url 的ip
    OCP_MAZ_OCP_VPORT_LIST=(8080 8080 8080)      # 对应 ocp1，ocp2，ocp3配置的 site-url 的port
@@ -186,18 +186,18 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
    OCP_MAZ_METAPROXY_VPORT_LIST=(2883 2883 2883)         # 对应 ocp1, ocp2, ocp3使用的metadb 连接port
    ```
 
-4. 部署多 AZ 模式的 OCP 时，需配置"OCP 多 AZ 配置" 段落的内容。
+4. 部署多可用区模式的 OCP 时，需配置"OCP 多可用区配置" 段落的内容。
 
    需要修改的信息如下：
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>模板中默认多 AZ 是 3 个，如实际规划部署的 AZ 不为 3，可自行增减参数项中值的个数。如实际规划部署 2 个可用区，则可配置 OCP_MAZ_AZ_NAME_LIST=(az1 az2)。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>模板中默认多可用区是 3 个，如实际规划部署的可用区不为 3，可自行增减参数项中值的个数。如实际规划部署 2 个可用区，则可配置 OCP_MAZ_AZ_NAME_LIST=(az1 az2)。</p>
+   </main>
 
-   * OCP_MAZ_ENABLED：是否启用多 AZ 模式，默认为 FALSE。启用时配置为 TRUE。
+   * OCP_MAZ_ENABLED：是否启用多可用区模式，默认为 FALSE。启用时配置为 TRUE。
 
-   * OCP_MAZ_AZ_NAME_LIST：分别指定三个 OCP 节点的 AZ 名称，例如 "(az1 az2 az3)"。不同OCP 节点的 AZ 名称可以相同，例如"(az1 az1 az2)"。
+   * OCP_MAZ_AZ_NAME_LIST：分别指定三个 OCP 节点的可用区名称，例如 "(az1 az2 az3)"。不同OCP 节点的可用区名称可以相同，例如"(az1 az1 az2)"。
 
    * OCP_MAZ_OCP_VIP_LIST：分别指定三个 OCP 节点的服务地址，即 SiteUrl 的主机部分，例如"(10.1.1.1 10.1.1.2 10.1.1.3)"。
 
