--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
@@ -8,7 +8,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
 在安装 OceanBase 数据库之前，需要确认以下信息：
 
-* OBServer 服务器已完成相关配置。有关配置 OBServer 服务器详细信息，请参 [服务器配置](../../2.preparations-before-deployment/2.server-configuration.md)。
+* OBServer 节点已完成相关配置。有关配置 OBServer 节点详细信息，请参 [服务器配置](../../2.preparations-before-deployment/2.server-configuration.md)。
 
 * 部署环境已完成相关配置。有关部署环境的详细信息，请参见 [部署环境配置](../../4.command-line-deployment/1.configure-a-deployment-environment-command-line/2.configure-deployment-environment-by-using-the-oat-cli.md)。
 
@@ -25,10 +25,10 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    [root@xxx $rpm_dir]# rpm -ivh $rpm_name
    ```
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>OceanBase 数据库软件会安装在目录 <code>/home/admin/oceanbase</code> 下。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>OceanBase 数据库软件会安装在目录 <code>/home/admin/oceanbase</code> 下。</p>
+   </main>
 
    示例如下：
 
@@ -140,10 +140,10 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
    在每个节点的 `admin` 用户下，启动 observer 进程。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>三副本下，每个节点启动参数并不完全相同。启动 observer 时只需指定 RootService 所在的 3 台（或者多台）机器，不需要在创建集群时指定所有机器；集群创建完成后可以添加新的机器。</p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>三副本下，每个节点启动参数并不完全相同。启动 observer 时只需指定 Root Service 所在的 3 台（或者多台）机器，不需要在创建集群时指定所有机器；集群创建完成后可以添加新的机器。</p>
+   </main>
 
    参数里指定数据文件的大小、内存的大小，以方便个别环境资源不足想精确控制observer对资源的占用。具体说明如下：
 
@@ -157,7 +157,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    | `-d`   | 指定集群主目录，除集群名字 `obdemo` 外，其他不要变动。|
    | `-c`   | 指定集群 ID。为一组数字，可以自定义，不同集群不要重复即可。|
    | `-l`   | 指定日志级别。|
-   | `-r`   | 指定 RS 列表，格式是 ip:2882:2881 ，分号分割，表示 RootService 信息。三台机器参数一致。|
+   | `-r`   | 指定 RS 列表，格式是 ip:2882:2881 ，分号分割，表示 Root Service 信息。三台机器参数一致。|
    | `-o`   | 指定集群启动参数，需要根据实际情况设置。<ul><li>`system_memory`：指定 OceanBase 内部保留内存，默认是 `30G` ，机器内存比较少的情况下把这个调小，影响就是可能在性能测试时有内存不足问题。</li><li>`datafile_size`：指定 OceanBase 数据文件 `sstable` 的大小（一次性初始化），根据 `/data/1/` 可用空间评估，建议不少于 `100G`，同时又保留一些剩余空间。<blockquote><b>说明</b></br>如果 `/data/1` 跟 `/data/log1` 本身就是一个文件系统（共用一个盘），那么务必保证留给 `/data/log1` 的空间大小是内存的 2-4 倍。</blockquote></li><li>`config_additional_dir` 指定参数文件的冗余目录。</li></ul>|
 
    示例如下：
@@ -228,7 +228,7 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
 2. 集群 bootstrap 操作。
 
-   通过 obclient 命令连接任意一台节点，密码为空。
+   通过 OBClient 命令连接任意一台节点，密码为空。
 
    ```javascript
    [root@xxx admin]# obclient -h127.1 -uroot -P2881 -p
@@ -241,10 +241,10 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    Query OK, 0 rows affected
    ```
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>如果这一步失败报错了，其原因很可能就是三节点 observer 进程启动参数有不对、observer 相关目录权限不对、日志目录空间不足一定比例（跟数据目录合用了大目录，空间被数据目录占用了）、三节点时间不同步、节点内存资源不足等。请先排查这些问题点后，然后清理 OceanBase 目录从头开始（请参见 <strong>清理 OceanBase 目录（第一次不用）</strong> ）。</p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>如果这一步失败报错了，其原因很可能就是三节点 observer 进程启动参数有不对、observer 相关目录权限不对、日志目录空间不足一定比例（跟数据目录合用了大目录，空间被数据目录占用了）、三节点时间不同步、节点内存资源不足等。请先排查这些问题点后，然后清理 OceanBase 目录从头开始（请参见 <strong>清理 OceanBase 目录（第一次不用）</strong> ）。</p>
+   </main>
 
 3. 验证集群初始化成功。
 
