--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy.md
@@ -1,6 +1,6 @@
 # 部署 OBProxy
 
-OBProxy 可以将用户发起的数据访问请求转发到 OBServer 上，转发到后端 OBServer 的请求返回数据时，依然要通过 OBProxy 回发给客户端。
+OBProxy 可以将用户发起的数据访问请求转发到 OBServer 节点上，转发到后端 OBServer 节点的请求返回数据时，依然要通过 OBProxy 回发给客户端。
 
 本节主要介绍通过使用 RPM 包安装 OBProxy。
 
@@ -168,7 +168,7 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
 
    | **参数** |         **说明**          |
    |--------|-------------------------|
-   | `-r`   | 指定 OBServer 服务器 IP 和端口。 |
+   | `-r`   | 指定 OBServer 节点 IP 和端口。 |
    | `-p`   | 指定服务端口号，一般指定为 `2883`。   |
    | `-c`   | 指定集群名称。                 |
    | `-o`   | 指定硬件或者内核参数配置。           |
