--- a/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -104,7 +104,7 @@ MySQL [oceanbase]> show global variables like '%foreign%';
 1 row in set
 ```
 
-在 obclient 里通过 `source` 命令可以执行外部 SQL 脚本文件。
+在 OBClient 里通过 `source` 命令可以执行外部 SQL 脚本文件。
 
 ### 导出指定数据库的表数据（不包括结构）
 
