--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/1.before-you-start.md
@@ -4,23 +4,23 @@
 
 ## 关于内存
 
-OceanBase 数据库是基于 LSM-tree 的存储引擎，不同于传统数据库实时刷脏页的机制，OceanBase 数据库将数据分为内存中的 MEMTable 和磁盘中的 SSTable，其中所有的数据更新写入操作都在内存的 MEMTable 中完成，并且在内存使用量达到一定阈值后触发 Compaction，转储至 SSTable，并释放活跃的内存。这种架构的优势是可以将随机 I/O 转化为顺序 I/O，提供更大的写入吞吐能力。详细介绍请参考 [存储架构概述](../../7.reference/1.oceanbase-database-concepts/9.storage-architecture/1.storage-architecture-overview.md)。
+OceanBase 数据库是基于 LSM-Tree 的存储引擎，不同于传统数据库实时刷脏页的机制，OceanBase 数据库将数据分为内存中的 MemTable 和磁盘中的 SSTable，其中所有的数据更新写入操作都在内存的 MemTable 中完成，并且在内存使用量达到一定阈值后触发 Compaction，转储至 SSTable，并释放活跃的内存。这种架构的优势是可以将随机 I/O 转化为顺序 I/O，提供更大的写入吞吐能力。详细介绍请参考 [存储架构概述](../../7.reference/1.oceanbase-database-concepts/9.storage-architecture/1.storage-architecture-overview.md)。
 
-由于 LSM-tree 将增量数据都存放在内存中，达到一定阈值后才触发转储，这会导致小规格的租户实例运行在超过其可承载能力的密集写入场景时（例如数据导入或者运行大量数据批处理场景），会因为 MEMTable 达到上限而无法接受新的请求。OceanBase 数据库有如下几种处理方式：
+由于 LSM-Tree 将增量数据都存放在内存中，达到一定阈值后才触发转储，这会导致小规格的租户实例运行在超过其可承载能力的密集写入场景时（例如数据导入或者运行大量数据批处理场景），会因为 MemTable 达到上限而无法接受新的请求。OceanBase 数据库有如下几种处理方式：
 
 * 开启写入限速：设置内存写入达到一定阈值后，OceanBase 数据库主动限制客户端导入速度。
   
 * 租户内存扩容：环境中节点总内存资源相对充足，可扩大租户内存。
 
-* 调整租户内存中 MEMTable 的比例：当节点总内存有限，无法扩容时，还可调整租户内存中 MEMTable 的比例，扩大可写入内存，并且调低转储阈值，让转储更快发生。
+* 调整租户内存中 MemTable 的比例：当节点总内存有限，无法扩容时，还可调整租户内存中 MemTable 的比例，扩大可写入内存，并且调低转储阈值，让转储更快发生。
 
 ### 开启写入限速
 
 OceanBase 数据库具备写入过载保护功能，当资源有限，无法扩展内存时，可以通过服务端写入限速来保护内存，避免写入超限。可通过设置如下两个配置项来开启服务端的写入限速功能：
 
-* `writing_throttling_trigger_percentage`：用于设置写入速度的阈值，即当 MEMStore 已使用的内存达到该阈值（百分比）时，触发写入限速。该配置项的取值范围为 [1, 100]，默认值为 60，取值为 100 表示关闭写入限速机制。
+* `writing_throttling_trigger_percentage`：用于设置写入速度的阈值，即当 MemStore 已使用的内存达到该阈值（百分比）时，触发写入限速。该配置项的取值范围为 [1, 100]，默认值为 60，取值为 100 表示关闭写入限速机制。
 
-* `writing_throttling_maximum_duration` ：指定触发写入限速后，剩余 MEMStore 内存分配完所需的时间。默认值为 2h，该配置项一般不做修改。
+* `writing_throttling_maximum_duration` ：指定触发写入限速后，剩余 MemStore 内存分配完所需的时间。默认值为 2h，该配置项一般不做修改。
 
 在租户的管理员账号中，设置内存写入达到 80% 开始限速，并保证剩余内存足够提供 2h 的写入限速，示例如下：
 
@@ -67,12 +67,12 @@ Query OK, 0 rows affected
     <p>当前版本中，仅 CPU、Memory 配置生效，其他 I/O 参数（例如 IPOS）暂不生效。</p>
   </main>
 
-### 调整租户内存中 MEMTable 的比例
+### 调整租户内存中 MemTable 的比例
 
-通过如下配置项来调整租户内存中 MEMTable 的比例：
+通过如下配置项来调整租户内存中 MemTable 的比例：
 
-* `freeze_trigger_percentage`：当租户的 MemTable 内存的使用量达到此配置项所限制使用的百分比时，就会自动触发转储，转储后会释放占用的内存。该配置项取值范围 [1,99]，默认值为 20，表示当 MEMStore 使用率超过 20%，就会触发转储。
-* `memstore_limit_percentage`：该配置项用于控制租户内存中可用于 MEMStore 写入的比例，取值范围 [1,99]，默认值为 50，表示租户可使用的 MEMStore 占其总可用内存的 50%。
+* `freeze_trigger_percentage`：当租户的 MemTable 内存的使用量达到此配置项所限制使用的百分比时，就会自动触发转储，转储后会释放占用的内存。该配置项取值范围 [1,99]，默认值为 20，表示当 MemStore 使用率超过 20%，就会触发转储。
+* `memstore_limit_percentage`：该配置项用于控制租户内存中可用于 MemStore 写入的比例，取值范围 [1,99]，默认值为 50，表示租户可使用的 MemStore 占其总可用内存的 50%。
 
 当内存不足时，可以调高 `memstore_limit_percentage` 的取值，并调低 `freeze_trigger_percentage` 的取值，从而达到临时扩容和尽快转储释放的效果。
 
