--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md
@@ -18,7 +18,7 @@
 
 2. 使用 MySQL 命令连接 MySQL 租户。
 
-   * 通过 OBProxy 连接的方式
+   * 通过 ODP 连接的方式
 
       ```sql
       $mysql -h10.10.10.1 -uusername@obmysql#obdemo -P2883 -ppassword -c -A oceanbase
@@ -32,11 +32,11 @@
 
       参数说明：
 
-      * -h：提供 OceanBase 数据库连接 IP，通常是一个 OBProxy 地址。
+      * -h：提供 OceanBase 数据库连接 IP，通常是一个 ODP 地址。
 
       * -u：提供租户的连接账户，格式有两种：`用户名@租户名#集群名`或者 `集群名:租户名:用户名`。使用 My SQL 客户端仅支持连接 MySQL 租户，MySQL 租户的管理员用户名默认是 `root`。
 
-      * -P：提供 OceanBase 数据库连接端口，也是 OBProxy 的监听端口，默认为 2883，在部署 OBProxy 时可自定义。
+      * -P：提供 OceanBase 数据库连接端口，也是 ODP 的监听端口，默认为 2883，在部署 ODP 时可自定义。
 
       * -c：表示在 MySQL 运行环境中不要忽略注释。
 
@@ -64,9 +64,9 @@
 
       参数说明：
 
-      * -h：提供 OceanBase 数据库连接 IP，通常是一个 OBServer 的 IP 地址。
+      * -h：提供 OceanBase 数据库连接 IP，通常是一个 OBServer 节点的 IP 地址。
 
-      * -u：提供租户的连接账户，格式为：`用户名@租户名`。使用 My SQL 客户端仅支持连接 MySQL 租户，MySQL 租户的管理员用户名默认是 `root`。
+      * -u：提供租户的连接账户，格式为：`用户名@租户名`。使用 MySQL 客户端仅支持连接 MySQL 租户，MySQL 租户的管理员用户名默认是 `root`。
 
       * -P：提供 OceanBase 数据库连接端口，默认是 2881，在部署 OceanBase 数据库时可自定义。
 
@@ -78,7 +78,7 @@
 
       * oceanbase：访问的数据库的名称，可以更改为业务数据库。
 
-      * 普通租户通过直连方式连接时，需要确保该租户的资源分布在该 OBServer上，如果该租户的资源未分布在该 OBServer 上，则无法通过直连该 OBServer 连接到该租户。
+      * 普通租户通过直连方式连接时，需要确保该租户的资源分布在该 OBServer 节点上，如果该租户的资源未分布在该 OBServer 节点上，则无法通过直连该 OBServer 节点连接到该租户。
 
       示例：
 
