--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -14,9 +14,9 @@
 
 2. 连接数据库。
 
-   支持通过 OBProxy 连接数据库或者直接连接数据库。
+   支持通过 ODP 连接数据库或者直接连接数据库。
 
-   * 通过 OBProxy 连接的方式
+   * 通过 ODP 连接的方式
 
       ```sql
       obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -ppassword -c -A oceanbase
@@ -30,11 +30,11 @@
 
       参数说明：
 
-      * -h：提供 OceanBase 数据库连接 IP，通常是一个 OBProxy 地址。
+      * -h：提供 OceanBase 数据库连接 IP，通常是一个 ODP 地址。
 
       * -u：提供租户的连接账户，格式有两种：`用户名@租户名#集群名` 或者 `集群名:租户名:用户名`。MySQL 租户的管理员用户名默认是 `root`。
 
-      * -P：提供 OceanBase 数据库连接端口，也是 OBProxy 的监听端口，默认是 2883，在部署 OBProxy 时可自定义。
+      * -P：提供 OceanBase 数据库连接端口，也是 ODP 的监听端口，默认是 2883，在部署 ODP 时可自定义。
 
       * -c：表示在 MySQL 运行环境中不要忽略注释。
 
@@ -62,7 +62,7 @@
 
       参数说明：
 
-      * -h：提供 OceanBase 数据库连接 IP，通常是一个 OBServer 的 IP 地址。
+      * -h：提供 OceanBase 数据库连接 IP，通常是一个 OBServer 节点的 IP 地址。
 
       * -u：提供租户的连接账户，格式：`用户名@租户名`。MySQL 租户的管理员用户名默认是 `root`。
 
@@ -76,7 +76,7 @@
 
       * oceanbase：访问的数据库的名称，可以更改为业务数据库。
 
-      * 普通租户通过直连方式连接时，需要确保该租户的资源分布在该 OBServer 上，如果该租户的资源未分布在该 OBServer 上，则无法通过直连该 OBServer 连接到该租户。
+      * 普通租户通过直连方式连接时，需要确保该租户的资源分布在该 OBServer 节点上，如果该租户的资源未分布在该 OBServer 节点上，则无法通过直连该 OBServer 节点连接到该租户。
 
       示例：
 
@@ -90,7 +90,7 @@
    obclient>
    ```
 
-4. 如果需要退出 OBClient 命令行，输入 `exit` 后回车，或者按快捷键 **Ctrl** + **D** 。
+4. 如果需要退出 OBClient 命令行，输入 `exit` 后回车，或者按快捷键 **Ctrl** + **D**。
 
 ## 连接示例
 
