--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/6.environment-check-before-deployment.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/6.environment-check-before-deployment.md
@@ -1,6 +1,6 @@
 # 部署前环境检查
 
-服务器和操作系统参数设置完成后，为确保部署的正常进行，需要验证 OBServer 和 OCP 服务器是否满足了标准安装条件。
+服务器和操作系统参数设置完成后，为确保部署的正常进行，需要验证 OBServer 节点和 OCP 服务器是否满足了标准安装条件。
 
 ## OCP 服务器
 
@@ -13,9 +13,9 @@ sh precheck.sh -m ocp
 
 执行后，如果有显示 `FAIL` 的信息，根据错误提示进行修改即可。
 
-## OBServer 服务器
+## OBServer 节点
 
-在 OBServer 所有服务器上，执行以下命令：
+在所有 OBServer 节点上，执行以下命令：
 
 ```shell
 cd /root/t-oceanbase-antman/clonescripts 
