--- a/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -49,11 +49,11 @@ CloudCanal 是一款数据迁移同步工具，帮助企业快速构建高质量
 
          OceanBase 数据源设置：
 
-         * 网络地址：填写连接 OceanBase 数据库的 IP，直连或通过 OBProxy。
+         * 网络地址：填写连接 OceanBase 数据库的 IP，直连或通过 ODP 连接。
          * oblogproxy host：oblogproxy 的 IP 地址。OceanBase 数据库作为源库增量同步时，不可以为空；OceanBase 数据库作为目标库时，可为空。有关 oblogproxy 的详细信息，请参考 [oblogproxy](http://11.124.9.83:19898/obdoc/oms-enterprise/V3.4.0/zh-CN/index.html#/5.1.install-oblogproxy.html)。
          * OceanBaseRpcPort：OceanBase Rpc 端口，默认 2882。
          * 认证方式：分别为 **账号密码**、**有账号密码** 和 **无账号密码**。默认账号密码。
-         * 账号：连接 OceanBase 数据库的用户名。直连格式：**用户名@租户名称**；OBProxy 连接格式：**用户名@租户名称#集群名称**。
+         * 账号：连接 OceanBase 数据库的用户名。直连格式：**用户名@租户名称**；ODP 连接格式：**用户名@租户名称#集群名称**。
          * 密码：连接 OceanBase 数据库的用户名对应的密码。
          * 描述：选填项，备注便于记忆的名字，方便使用时识别，如交易库、用户库、测试库等。
 
